sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: not found: value i
	while(i != j){
              ^AlgGnomeSort:5: error: not found: value i
  	if(i>1){
           ^AlgGnomeSort:6: error: not found: value i
    	if(!plusPetit(i-1,i+1)){
                      ^AlgGnomeSort:6: error: not found: value i
    	if(!plusPetit(i-1,i+1)){
                          ^AlgGnomeSort:7: error: not found: value i
    		echange(i-1,i+1);
                        ^AlgGnomeSort:7: error: not found: value i
    		echange(i-1,i+1);
                            ^AlgGnomeSort:9: error: not found: value i
  		i = i+1;
                ^AlgGnomeSort:13: error: not found: value i
      i = i+1;
      ^