sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  val j : Int = getNombreValeurs
	while(i != j){
  	if(i>1){
    	if(!plusPetit(i-1,i+1)){
    		echange(i-1,i+1);
  		}
  		i = i+1;
  	}
    else
    { 
      i = i+1;
    }
	}
}